# vector-space

./: CLAUDE.md  README.md  pyproject.toml
src/vector_space/: __init__.py  csv_converter.py  example_mapping.json  example_mapping.py  example_mapping_double_header.json  example_mapping_double_header.py  example_mapping_double_header_lla.py  example_mapping_lla.py
tests/: test_csv_converter.py  test_mapping_combinations.py
tests/fixtures/: double_header_lla.csv  double_header_ned.csv  mapping_double_header_lla.json  mapping_double_header_lla.py  mapping_double_header_ned.json  mapping_double_header_ned.py  mapping_single_header_lla.json  mapping_single_header_lla.py  mapping_single_header_ned.json  mapping_single_header_ned.py  single_header_lla.csv  single_header_ned.csv
web/: index.html
web/css/: styles.css
web/data/: test_custom_columns.csv  test_multi_platform.csv  test_multi_platform_scale.csv  test_sensor_tracks.csv  test_sensors.csv  test_stabilized_gimbal.csv  test_straight_line.csv  test_turning.csv  test_variable_hz.csv
web/js/: main.js
web/js/core/: CSVParser.js  CoordinateSystem.js  DataModel.js  SimulationMerger.js  TimelineController.js
web/js/rendering/: GridRenderer.js  PlatformRenderer.js  SceneManager.js  SensorRenderer.js  TrackRenderer.js  TrajectoryRibbonRenderer.js
web/js/ui/: CustomDataPanel.js  FileUpload.js  LinePlotPanel.js  PlatformDetailsPanel.js  PlatformListPanel.js  TimeControls.js
